[gd_scene load_steps=16 format=2]

[ext_resource path="res://Scripts/Entities/navigator.gd" type="Script" id=1]
[ext_resource path="res://Scripts/Entities/mothersoldier.gd" type="Script" id=2]
[ext_resource path="res://Sprites/Other/shadow_0.png" type="Texture" id=3]
[ext_resource path="res://Sprites/Mobs/MotherSoldier/mothersol_0.png" type="Texture" id=4]
[ext_resource path="res://Sprites/Mobs/MotherSoldier/mothersol_1.png" type="Texture" id=5]
[ext_resource path="res://Sprites/Mobs/MotherSoldier/mothersol_2.png" type="Texture" id=6]
[ext_resource path="res://Sprites/Mobs/MotherSoldier/mothersol_3.png" type="Texture" id=7]
[ext_resource path="res://Sprites/Mobs/MotherSoldier/mothersol_4.png" type="Texture" id=8]
[ext_resource path="res://Sprites/Mobs/MotherSoldier/mothersol_5.png" type="Texture" id=9]
[ext_resource path="res://Sprites/Mobs/MotherSoldier/mothersol_6.png" type="Texture" id=10]
[ext_resource path="res://Sprites/Mobs/MotherSoldier/mothersol_deg.png" type="Texture" id=11]
[ext_resource path="res://Scenes/Maps/nav3.tres" type="NavigationPolygon" id=12]

[sub_resource type="SpriteFrames" id=1]
animations = [ {
"frames": [ ExtResource( 4 ), ExtResource( 5 ), ExtResource( 6 ), ExtResource( 7 ), ExtResource( 8 ), ExtResource( 9 ), ExtResource( 10 ), ExtResource( 9 ), ExtResource( 8 ), ExtResource( 7 ), ExtResource( 6 ), ExtResource( 5 ) ],
"loop": true,
"name": "default",
"speed": 5.0
}, {
"frames": [ ExtResource( 11 ) ],
"loop": true,
"name": "hurt",
"speed": 5.0
} ]

[sub_resource type="CircleShape2D" id=2]
radius = 289.624

[sub_resource type="CircleShape2D" id=3]
radius = 15.2487

[node name="mothersoldier" type="Node2D"]
script = ExtResource( 1 )

[node name="soldier" type="KinematicBody2D" parent="."]
position = Vector2( 0.307358, 0.614716 )
z_index = 1
collision_layer = 2
script = ExtResource( 2 )

[node name="Sprite" type="Sprite" parent="soldier"]
position = Vector2( 0.0291538, 24.5813 )
scale = Vector2( 7.15682, 2.88677 )
texture = ExtResource( 3 )

[node name="AnimatedSprite" type="AnimatedSprite" parent="soldier"]
frames = SubResource( 1 )
frame = 11
playing = true

[node name="CollisionShape2D" type="CollisionPolygon2D" parent="soldier"]
visible = false
position = Vector2( -0.160797, -13.3548 )
polygon = PoolVector2Array( -24.2586, 32.4005, -15.5904, 18.6047, -4.8468, 15.6746, 4.30971, 15.7967, 15.7859, 20.3139, 24.9424, 32.1563, 36.8323, 18.1596, 42.7764, -1.94531, 41.7275, -23.274, 30.3808, -33.5588, 11.2421, -36.8713, -12.4973, -36.8713, -30.6575, -32.3192, -40.963, -24.0381, -41.331, 0.0693941, -37.2824, 17.5519 )

[node name="Hit" type="Timer" parent="soldier"]

[node name="vision" type="Area2D" parent="soldier"]
collision_layer = 17
collision_mask = 12

[node name="CollisionShape2D" type="CollisionShape2D" parent="soldier/vision"]
visible = false
shape = SubResource( 2 )

[node name="Timer" type="Timer" parent="soldier"]

[node name="solpos" type="Position2D" parent="soldier"]

[node name="detect" type="Area2D" parent="soldier/solpos"]
collision_layer = 16

[node name="CollisionShape2D" type="CollisionShape2D" parent="soldier/solpos/detect"]
shape = SubResource( 3 )

[node name="cosmicgoo" type="Area2D" parent="soldier"]

[node name="CollisionShape2D2" type="CollisionPolygon2D" parent="soldier/cosmicgoo"]
visible = false
position = Vector2( -0.160797, -13.3548 )
polygon = PoolVector2Array( -24.2586, 32.4005, -15.5904, 18.6047, -4.8468, 15.6746, 4.30971, 15.7967, 15.7859, 20.3139, 24.9424, 32.1563, 36.8323, 18.1596, 42.7764, -1.94531, 41.7275, -23.274, 30.3808, -33.5588, 11.2421, -36.8713, -12.4973, -36.8713, -30.6575, -32.3192, -40.963, -24.0381, -41.331, 0.0693941, -37.2824, 17.5519 )

[node name="SoundHit" type="AudioStreamPlayer2D" parent="soldier"]

[node name="navigator" type="Navigation2D" parent="."]
visible = false

[node name="NavigationPolygonInstance" type="NavigationPolygonInstance" parent="navigator"]
navpoly = ExtResource( 12 )

[node name="Timer" type="Timer" parent="."]
[connection signal="animation_finished" from="soldier/AnimatedSprite" to="soldier" method="_on_AnimatedSprite_animation_finished"]
[connection signal="timeout" from="soldier/Hit" to="soldier" method="_on_Hit_timeout"]
[connection signal="body_entered" from="soldier/vision" to="soldier" method="_on_vision_body_entered"]
[connection signal="timeout" from="soldier/Timer" to="soldier" method="_on_Timer_timeout"]
[connection signal="body_entered" from="soldier/solpos/detect" to="soldier" method="_on_detect_body_entered"]
[connection signal="area_entered" from="soldier/cosmicgoo" to="soldier" method="_on_cosmicgoo_area_entered"]
[connection signal="area_exited" from="soldier/cosmicgoo" to="soldier" method="_on_cosmicgoo_area_exited"]
[connection signal="timeout" from="Timer" to="." method="_on_Timer_timeout"]
